--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        root.appendChild(heading);
     </script> -->
 
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./src/App.js"></script>
 
 
 </body>
